# study-buddy-ai

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  frontend.Dockerfile  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  exceptions.py  main.py  requirements.txt
backend/api/: routes.py
backend/models/: schemas.py
backend/rag/: chunker.py  embedder.py  generator.py  retriever.py  summarizer.py
backend/scripts/: export_model.py
backend/service/: document_service.py  qa_service.py  summary_service.py
backend/tests/: conftest.py  test_chunker.py  test_generator.py  test_retriever.py  test_routes.py  test_summarizer.py
backend/utils/: parser.py
src/: index.css
src/components/: ChatInput.test.tsx  ChatInput.tsx  ChatMessage.test.tsx  ChatMessage.tsx  FileUpload.test.tsx  FileUpload.tsx  Iridescence.tsx  SummarizePanel.test.tsx  SummarizePanel.tsx  TypingIndicator.test.tsx  TypingIndicator.tsx
src/pages/: Index.tsx
src/types/: html2pdf.d.ts
