[project]
name = "study-buddy-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladislav",email = "ogloblinvlad6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "python-docx (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false